[package]
name = "llvmgen"
version = "0.1.0"
authors = ["Sen Na <1439468790@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "90.0.0"
cparser = { path = "../cparser" }
failure = { version = "0.1.6", feature = ["backtrace"] }
